# tg

./: .gitignore  AGENTS.md  README.md  opencode.jsonc  pyproject.toml
.github/workflows/: opencode.yml
.opencode/agents/: architect.md  builder.md  github-builder.md  hermes.md  operator.md  reviewer.md  tester.md
docs/: architecture.md  coding-rules.md  deepseek-setup.md  github-integration.md  hermes-control.md  local-deepseek-v4.md  python-workflow.md  workflow.md
scripts/: check-gpu.ps1  check-local-deepseek.ps1  check-opencode-env.ps1  github-check.ps1  github-clone-reference.ps1  github-login.ps1  github-search-code.ps1  new-python-task-project.ps1  new-python-worktree.ps1  new-worktree.ps1  python-bootstrap.ps1  python-validate.ps1  start-hermes.ps1  start-opencode-local-deepseek.ps1  start-opencode.ps1  start-task-project.ps1
scripts/linux/: check-env.sh  new-python-task-project.sh  python-bootstrap.sh  python-validate.sh  start-hermes.sh
skills/ai-parallel-coding-bootstrap/: SKILL.md
skills/ai-parallel-coding-bootstrap/agents/: openai.yaml
skills/ai-parallel-coding-bootstrap/references/: agent-usage.md  (+1 more)
src/opencode_automation/: __init__.py
templates/: hermes-plan.md  parallel-plan.md  task-brief.md  task-dispatch.md
templates/github-actions/: opencode-dispatch.yml  opencode-review.yml  opencode-scheduled.yml
templates/python-project/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
templates/python-project/src/task_project/: __init__.py
templates/python-project/tests/: test_smoke.py
tests/: test_workspace.py
(+2 files in other folders)
