[project]
name = "opencode-automation-workspace"
version = "0.1.0"
description = "Python tooling for an OpenCode + GitHub parallel development workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
